# oneapi-ci

.github/workflows/: build_all.yml
src/cmake/: CMakeLists.txt
src/mpi/: CMakeLists.txt  hello_world_mpi.f90
src/openmp/: CMakeLists.txt
